--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,8 +38,9 @@ jobs:
       - name: "Install CUDA"
         shell: powershell
         run: |
-          choco install cuda --version=12.0.1.52833 -y
-          "C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v12.0\bin" >> $env:GITHUB_PATH
+          choco install cuda -y
+          $cudaPath = (Get-ChildItem 'C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\' | Select-Object -Last 1).FullName
+          "$cudaPath\bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
 
       - name: "Build"
         shell: powershell
